[package]
name = "ui_representation_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ui_representation = {path = "../ui_representation"}
quote = "1"
syn = { version = "1", features = ["extra-traits", "derive", "printing"] }
proc-macro2 = "1"
proc-macro-error = "1"

[lib]
proc-macro = true